# BatchReactor

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
configs/: default.json  default.yaml  lab_scale_reactor.json  lab_scale_reactor.yaml  pid_layout.json  pid_topology_overlay.json
dashboard/: index.html
docs/: CONFIG_REACTION_NETWORKS.md  OPC_TOOL.md  OPC_UA.md  equations.md  requirements.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
opc_frontend/: index.html  package-lock.json  package.json  vite.config.js
opc_tool_data/: connections.json  nodes.json
recipes/: default.xml  default.yaml  default_b2mml.xml  default_flat.yaml  test_fast.yaml
scripts/: generate_data_package.py  generate_dockerfile.py  opcua_client.py  setup_common.sh  setup_opc_tool.sh  setup_reactor.sh
test_inputs/: jacket_override.yaml  normal_batch.yaml  runaway_reset.yaml  step_response.yaml
tests/: take_screenshots.py  test_alarm_management.py  test_api_quick.py  test_audit_trail.py  test_batch_isa88.py  test_batch_state.py  test_chemistry.py  test_config_loader.py  test_control_module.py  test_controller.py  test_dashboard.py  test_energy_models.py  test_equipment_module.py  test_fluid_mechanics.py  test_geometry.py  test_heat_transfer_models.py  test_integration.py  test_mixing_models.py  test_opc_client_manager.py  test_opc_mapping.py  test_opc_tool_client.py  test_opcua_integration.py  test_performance.py  test_physics.py  test_pid_canvas.py  test_reaction_network.py  test_recipe.py  (+5 more)
(+108 files in other folders)
